Arrumando probab ao contrario.

--- a/Relatorio-Dados.Rmd
+++ b/Relatorio-Dados.Rmd
@@ -730,6 +730,8 @@ cowplot::plot_grid(res_padronizado_1,res_padronizado_2,
 
 ### 3.2.3 Modelo final
 
+Tendo em vista os valores de acurácia no banco de validação, o gráfico da curva ROC e o critério de parcimônia, ficou clara a escolha pelo modelo com todas as variáveis, sem interações. Tal modelo será ajustado no banco de dados completo, a seguir.
+
 ```{r}
 # formula = X4 ~ X3 + factor(X1) + factor(X2)
 modelo_no_banco_completo <- glm(X4 ~ X3 + factor(X1) + factor(X2), family=binomial, data=amostra)
@@ -737,7 +739,7 @@ modelo_no_banco_completo <- glm(X4 ~ X3 + factor(X1) + factor(X2), family=binomi
 summary(modelo_no_banco_completo)
 ```
 
-É possível observar, pela saída do modelo final, que rejeitamos a hipótese nula de que os parâmetros do modelo são nulos, para todas as variáveis selecionadas, levando em consideração os baixos p-valores obtidos no teste z e o nível de significância adotado ($\alpha=5\%$). A interpretação dos coeficientes estimados pode ser vista por meio da tabela abaixo.
+É possível observar, pela saída do modelo final, que rejeitamos a hipótese nula de que os parâmetros do modelo são nulos, para todas as variáveis selecionadas, levando em consideração os baixos p-valores obtidos no teste Z e o nível de significância adotado ($\alpha=5\%$). A interpretação dos coeficientes estimados pode ser vista por meio da tabela abaixo.
 
 
 ```{r}
@@ -786,17 +788,17 @@ tbl_intervalos_betas_odds %>%
                   caption = 'Intervalos de confiança (95\\%) para o modelo final') %>% 
   kableExtra::kable_classic(full_width=FALSE,latex_options = "HOLD_position")
 ```
-O coeficiente $\hat{\beta_1}$, que acompanha a variável resultado da radiografia, indica que, mantendo todo o restante constante, o resultado negativo representa de 3,67 até 65,7 vezes a chance de ter envolvimento nodal, em comparação com o resultado positivo. Já o coeficiente $\hat{\beta_2}$, que acompanha a variável estágio do tumor, indica que, dado todo o restante constante, o estágio de tumor menos grave representa de 5,64 até 108,5 vezes a chance de ter o quadro de envolvimento nodal, em comparação com o estágio de tumor mais grave. Por fim, o parâmetro $\hat{\beta_3}$, referente ao nível de fosfatase ácida, revela que o incremento de 1 unidade (na escala x100) na fosfatase acarreta em um aumento multiplicativo na chance de ter envolvimento nodal de 1,01 até 1,05, isto é, de 1% até 5%.
+O coeficiente $\hat{\beta_1}$, que acompanha a variável resultado da radiografia, indica que, mantendo todo o restante constante, o resultado positivo representa de 3,67 até 65,7 vezes a chance de **não** ter envolvimento nodal, em comparação com o resultado negativo. Já o coeficiente $\hat{\beta_2}$, que acompanha a variável estágio do tumor, indica que, dado todo o restante constante, o estágio de tumor mais grave representa de 5,64 até 108,5 vezes a chance de **não** ter o quadro de envolvimento nodal, em comparação com o estágio de tumor menos grave. Por fim, o parâmetro $\hat{\beta_3}$, referente ao nível de fosfatase ácida, revela que o incremento de 1 unidade (na escala x100) na fosfatase acarreta em um aumento multiplicativo na chance de **não** ter envolvimento nodal de 1,01 até 1,05, isto é, de 1% até 5%.
 
 \newpage
 
 # 4. Conclusão
 
-O presente estudo propôs identificar fatores que acarretam no envolvimento nodal de pacientes com câncer de próstata, e nas relações desses fatores com a probabilidade de apresentar envolvimento. Desse modo, as análises exploratórias indicaram que todas as variáveis, resultado da radiografia, estágio do tumor e nível de fosfatase ácida apresentavam algum tipo de relação com a variável resposta. Seguindo para a modelagem, a regressão logística simples (apenas com a fosfatase ácida) se mostrou insatisfatória, não sendo capaz de explicar com êxito o envolvimento nodal dos indivíduos.
+O presente estudo propôs identificar fatores que acarretam no envolvimento nodal de pacientes com câncer de próstata, e nas relações desses fatores com a probabilidade de não apresentar envolvimento. Desse modo, as análises exploratórias indicaram que todas as variáveis, resultado da radiografia, estágio do tumor e nível de fosfatase ácida apresentavam algum tipo de relação com a variável resposta. Seguindo para a modelagem, a regressão logística simples (apenas com a fosfatase ácida) se mostrou insatisfatória, não sendo capaz de explicar com êxito o envolvimento nodal dos indivíduos.
 
-Desta forma, foi aplicado o procedimento de regressão logística múltipla, onde todas as variáveis da amostra foram consideradas. A etapa de escolha das variáveis indicou o modelo com todos os fatores (simples, sem interações) como sendo o mais pertinente, dado os valores de AIC, testes de ajustamento, curva ROC e valores de acurácia obtidos por meio da partição do banco que foi destinada para validação. Assim, o modelo escolhido apresentou resultados satisfatórios, e podemos dizer que é capaz de predizer o envolvimento nodal, dado as variáveis pré-operatorias, com um erro razoável. Certamente o erro de predição pode ser atenuado por meio de novos estudos, com maior número de indivíduos amostrados e coleta de novas variáveis.
+Desta forma, foi aplicado o procedimento de regressão logística múltipla, onde todas as variáveis da amostra foram consideradas. A etapa de escolha das variáveis indicou o modelo com todos os fatores (simples, sem interações) como sendo o mais pertinente, dado os valores de AIC, testes de ajustamento, curva ROC e valores de acurácia obtidos por meio da partição do banco que foi destinada para validação. Assim, o modelo escolhido apresentou resultados satisfatórios, e podemos dizer que é capaz de predizer a não ocorrência de envolvimento nodal, dado as variáveis pré-operatorias, com um erro razoável. Certamente o erro de predição poderia ser atenuado por meio de novos estudos, com maior número de indivíduos amostrados e coleta de novas variáveis.
 
-De modo geral, o resultado da radiografia negativo impactou positivamente na probabilidade de haver envolvimento nodal, assim como o estágio de tumor menos grave também parece gerar impacto significativo no aumento dessa probabilidade. Em relação ao nível de fosfatase ácida, apesar de ser maior em pacientes sem envolvimento nodal, os valores discrepantes presentes no grupo que possui envolvimento nodal podem ter repercurtido e afetado o modelo final, de tal sorte que o aumento de uma unidade no nível de fosfatase indicou um aumento multiplicativo na chance de ter envolvimento nodal de até 5%.
+De modo geral, o resultado da radiografia negativo impactou positivamente na probabilidade de haver envolvimento nodal, assim como o estágio de tumor menos grave também parece gerar impacto significativo no aumento dessa probabilidade. Em relação ao nível de fosfatase ácida, apesar de ser maior, em média, em pacientes sem envolvimento nodal, os valores discrepantes presentes no grupo que possui envolvimento nodal podem ter repercurtido e afetado o modelo final. De todo modo, o aumento de uma unidade no nível de fosfatase indicou um aumento multiplicativo na chance de não ter envolvimento nodal de até 5%.
 
 \newpage
 
